--- a/config/urchin.conf
+++ b/config/urchin.conf
@@ -2,6 +2,7 @@ CONFIG_ZMK_KEYBOARD_NAME="Urchin"
 
 # increase bluetooth signal power
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_BT_PERIPHERAL_PREF_MAX_INT=6
 
 # enable deep sleep support
 CONFIG_ZMK_SLEEP=y
@@ -14,8 +15,8 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 
 # "Eager Debouncing"
 # Trying to lower the input lag.
-# CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
-# CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
 
 # --- DISPLAY SETTINGS ---
 
@@ -23,3 +24,6 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 CONFIG_ZMK_WIDGET_WPM_STATUS=n
 # display battery as n%
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
