--- a/config/urchin.conf
+++ b/config/urchin.conf
@@ -6,6 +6,7 @@ CONFIG_BT_PERIPHERAL_PREF_MAX_INT=6
 
 # enable deep sleep support
 CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_PM_SOFT_OFF=n
 
 # the keyboard disconnects from bluetooth.
 # uses very little power, but it may take
